<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/lblRegistrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registroTittle"
            android:textColor="@color/colorTittles"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/lblNombreRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/colorTittles"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtNombreRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/lblClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/colorTittles"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName|textPassword" />

        <TextView
            android:id="@+id/lblRepetirClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passwordRepeat"
            android:textColor="@color/colorTittles"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtRepetirClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName|textPassword" />

        <TextView
            android:id="@+id/lblCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/colorTittles"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/lblTarjeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creditCard"
            android:textColor="@color/colorTittles"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:context=".MainActivity">

            <EditText
                android:id="@+id/txtNumeroTarjeta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/number"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtCCV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:hint="@string/ccv"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtVencimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/mmaa"
                android:inputType="date" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/rgTipoCuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblTipoCuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/accountType" />

            <RadioButton
                android:id="@+id/rbBase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/base" />

            <RadioButton
                android:id="@+id/rbPremium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/premium" />

            <RadioButton
                android:id="@+id/rbFull"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/full"
                android:textSize="14sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/lblCreditoInicial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/initialCredit"
            android:textColor="@color/colorTittles"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/seekBarCreditoInicial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/lblNotificarCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notif"
            android:textSize="18sp" />

        <Button
            android:id="@+id/BtnNotificaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bttnNotificaciones" />

        <Switch
            android:id="@+id/swVendedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isSeller"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/hiddenLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/lblAliasCBU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aliasCbu"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/txtAliasCbu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/lblCBU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cbu"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/txtCBU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/chkTerminos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms" />

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/bttnAccept" />
    </LinearLayout>

</ScrollView>
