<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbAltaPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/lblRegistrarPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrarPlato"
        android:textSize="@dimen/titulo"/>

    <TextView
        android:id="@+id/lblIdPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idPlato" />

    <EditText
        android:id="@+id/txtIdPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/lblNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/lblDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descripcion" />

    <EditText
        android:id="@+id/txtDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:maxLength="240" />

    <TextView
        android:id="@+id/lblPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/precio" />

    <EditText
        android:id="@+id/txtPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/lblCalorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calorias" />

    <EditText
        android:id="@+id/txtCalorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:maxLength="4" />

    <Button
        android:id="@+id/btnRegistrarPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAccept" />


</LinearLayout>