<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvFilaPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/cvElevation"
        android:layout_margin="@dimen/llMargin"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnOfertar"
                style="@android:style/Widget.Material.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="8dp"
                android:elevation="@dimen/cvElevation"
                android:text="@string/btnOfertar"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgFilaPlato"
                tools:visibility="visible" />

            <Button
                android:id="@+id/btnEditar"
                style="@android:style/Widget.Material.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="8dp"
                android:text="@string/btnEditar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnOfertar" />

            <Button
                android:id="@+id/btnQuitar"
                style="@android:style/Widget.Material.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="8dp"
                android:text="@string/btnQuitar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnEditar" />

            <ImageView
                android:id="@+id/imgFilaPlato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/txtPrecioPlato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:textSize="@dimen/etiquetas"
                app:layout_constraintBottom_toTopOf="@+id/btnOfertar"
                app:layout_constraintStart_toEndOf="@+id/imgFilaPlato"
                app:layout_constraintTop_toBottomOf="@+id/txtTituloPlato" />

            <TextView
                android:id="@+id/txtTituloPlato"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:textSize="@dimen/titulo"
                app:layout_constraintStart_toEndOf="@+id/imgFilaPlato"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtDescripcion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="@dimen/llMargin"
                android:text="TextView"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgFilaPlato"
                app:layout_constraintTop_toBottomOf="@+id/txtPrecioPlato" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>